# medyan_python_wrapper

./: CMakeLists.txt  README.md  environment.yml  install_deps.sh  pyproject.toml  vcpkg.json
medyan/: __init__.py  _cli.py  _core.py
medyan/src/: medyan_bind.cpp
