[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name            = "medyan"
version         = "5.4.0"
description     = "Python bindings for MEDYAN — Mechanochemical Dynamics of Active Networks"
readme          = "README.md"
license         = { text = "See license.txt" }
requires-python = ">=3.9"
keywords        = ["MEDYAN", "cytoskeleton", "simulation", "biophysics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
analysis = ["numpy>=1.21", "matplotlib>=3.5"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args       = ["-DMEDYAN_NO_GUI=true"]
wheel.packages   = ["medyan"]
