[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "medyan"
version = "5.4.0"
description = "MEDYAN: Mechanochemical Dynamics of Active Networks — Python wrapper"
readme = "README.md"
license = { text = "See license.txt" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
medyan = "medyan._cli:main"

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.version = ">=3.15"
wheel.install-dir = "."

[tool.scikit-build.cmake.define]
MEDYAN_NO_GUI = "true"